--- a/_data/data.yaml
+++ b/_data/data.yaml
@@ -29,10 +29,26 @@ statuses:
     Compromised:
         color: compromised
         icon: handshake-o
-
+-
+        title: 'Test test test2222'
+        status: started
+        category: First 100 Days
+        tags:
+            - 'Contract with the American Voter - 100 Day Plan'
+        comments: 'https://redd.it/5d4r8m'
+        sources:
+            - 'https://web.archive.org/web/20161101093508/https://www.donaldjtrump.com/press-releases/donald-j.-trump-delivers-groundbreaking-contract-for-the-american-vote1'
+            - 'https://youtu.be/4t1xR9U6IAU?t=44s'
+            - 'https://web.archive.org/web/20161109222320/http://www.npr.org/2016/11/09/501451368/here-is-what-donald-trump-wants-to-do-in-his-first-100-days'
+    Make more trips
+    status:not started
+    aategory: first 100 Days
+    
+    
+    
 promises:
     -
-        title: 'Test test test'
+        title: 'Test test test1111'
         status: Not started
         category: First 100 Days
         tags:
